--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Prework Stufy Guide!</title>
+    <title>Prework Study Guide!</title>
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -42,14 +43,14 @@
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
-
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
       </section>
     </main>
-     <ul>
-       <li>Enter your JavaScript notes here</li>
-     </ul>
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
